# sunrise-test

./: .gitignore  Makefile
source/: main.c
std_library/: Cargo.toml
std_library/src/: lib.rs
